--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="utf-8" />
-  <title>Toko Kabel LAN — Demo</title>
+  <title>RifkyStore</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <style>
@@ -743,4 +743,5 @@ const DEFAULT_PRODUCTS = [
     updateCartUI();
   </script>
 </body>
+
 </html>
